firn_demo/deploy/00-namespace-sa.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: firn
